--- a/hxinsight-extension/pom.xml
+++ b/hxinsight-extension/pom.xml
@@ -51,11 +51,6 @@
         </dependency>
         <dependency>
             <groupId>org.alfresco</groupId>
-            <artifactId>alfresco-hxinsight-connector-common</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.alfresco</groupId>
             <artifactId>alfresco-hxinsight-connector-common-authentication</artifactId>
             <exclusions>
                 <exclusion>
@@ -64,9 +59,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
         <dependency>
-            <groupId>org.alfresco</groupId>
-            <artifactId>alfresco-hxinsight-connector-common-authentication</artifactId>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
             <scope>provided</scope>
         </dependency>
 
