--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,9 +45,11 @@ jobs:
           write-list-to-env: true
       - uses: Alfresco/alfresco-build-tools/.github/actions/pre-commit@v8.19.1
 
-  dependency_graph_submission:
-    name: "Build app and submit dependency graph"
+  dependency_graph:
+    name: "Submit dependency graph"
     runs-on: ubuntu-latest
+    needs:
+      - pre_commit
     if: >
       (github.event_name == 'push' || github.ref_name == 'master') &&
       !contains(github.event.head_commit.message, '[skip build]')
@@ -64,7 +66,7 @@ jobs:
       - name: "Build application"
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests
       - name: "Submit dependency graph"
-        uses: advanced-security/maven-dependency-submission-action@v4
+        uses: advanced-security/maven-dependency-submission-action@b275d12641ac2d2108b2cbb7598b154ad2f2cee8 #v5.0.0
         with:
           ignore-maven-wrapper: true
 
