--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,8 @@
         <wiremock.version>3.12.1</wiremock.version>
         <system-stubs.version>2.1.7</system-stubs.version>
 
+        <junit-platform.version>1.12.2</junit-platform.version>
+
         <testcontainers.version>1.20.6</testcontainers.version>
         <wiremock-testcontainers-module.version>1.0-alpha-14</wiremock-testcontainers-module.version>
 
@@ -176,6 +178,12 @@
                 <version>${spring-camel.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.junit.platform</groupId>
+                <artifactId>junit-platform-launcher</artifactId>
+                <version>${junit-platform.version}</version>
             </dependency>
 
             <dependency>
