--- a/common-authentication/pom.xml
+++ b/common-authentication/pom.xml
@@ -50,6 +50,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.wiremock.integrations.testcontainers</groupId>
             <artifactId>wiremock-testcontainers-module</artifactId>
             <scope>test</scope>
