--- a/hxinsight-extension/pom.xml
+++ b/hxinsight-extension/pom.xml
@@ -109,6 +109,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core-test</artifactId>
             <scope>test</scope>
