--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -167,8 +167,8 @@ jobs:
       permissions:
         pull-requests: write
       if: >
-        github.event_name == 'pull_request' &&
         github.actor != 'dependabot[bot]' &&
+        github.ref_name != 'master' &&
         !contains(github.event.head_commit.message, '[release]') &&
         !contains(github.event.head_commit.message, '[skip tests]') &&
         !contains(github.event.head_commit.message, '[skip coverage]')
