--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,8 +155,6 @@ jobs:
           name: jacoco-report-${{ matrix.subproject }}
           path: |
             ${{ github.workspace }}/${{ matrix.subproject }}/target/jacoco-${{ matrix.subproject }}.exec
-            ${{ github.workspace }}/${{ matrix.subproject }}/target/classes/
-            ${{ github.workspace }}/${{ matrix.subproject }}/src/main/java/
           retention-days: 1
           if-no-files-found: warn
 
@@ -174,8 +172,6 @@ jobs:
         !contains(github.event.head_commit.message, '[skip coverage]')
       steps:
         - uses: actions/checkout@v4
-          with:
-            fetch-depth: 0
 
         - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.23.0
         - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.23.0
@@ -199,7 +195,8 @@ jobs:
           with:
             name: jacoco-coverage-report
             path: |
-              ${{ github.workspace }}/*/target/site/jacoco/
+              ${{ github.workspace }}/**/target/site/jacoco/jacoco.xml
+              ${{ github.workspace }}/**/target/site/jacoco/index.html
             retention-days: 7
             if-no-files-found: warn
         - name: "Add Coverage Report to PR"
