feat(CIN-3844): add code coverage report jacoco implementation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -206,7 +206,9 @@ jobs:
             python ./scripts/ci/processCoverageReport.py
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            GITHUB_REPOSITORY: ${{ github.repository }}
             PR_NUMBER: ${{ github.event.pull_request.number }}
+            GITHUB_EVENT_NAME: ${{ github.event_name }}
         - name: "Enforce minimum code coverage threshold on changed files"
           if: ${{ github.event_name == 'pull_request' && steps.jacoco.outputs.coverage-changed-files < 80.0 }}
           uses: actions/github-script@v7
