--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
     needs:
       - pre_commit
     if: >
-      (github.event_name == 'push' || github.ref_name == 'master') &&
+      github.ref_name == 'master' &&
       !contains(github.event.head_commit.message, '[skip build]')
     steps:
       - uses: actions/checkout@v4
@@ -69,6 +69,7 @@ jobs:
         uses: advanced-security/maven-dependency-submission-action@b275d12641ac2d2108b2cbb7598b154ad2f2cee8 # v5.0.0
         with:
           ignore-maven-wrapper: true
+          maven-args: -Dscope=compile,runtime,system
 
   veracode_sast:
     name: "Pipeline SAST Scan"
