--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -200,15 +200,22 @@ jobs:
             if-no-files-found: warn
         - name: "Add Coverage Report to PR"
           id: jacoco
-          run: |
-            pip install PyGithub requests
-            python ./scripts/ci/processCoverageReport.py
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            GITHUB_REPOSITORY: ${{ github.repository }}
-            PR_NUMBER: ${{ github.event.pull_request.number }}
+          uses: madrapps/jacoco-report@50d3aff4548aa991e6753342d9ba291084e63848 # v1.7.2
+          with:
+            paths: |
+              ${{ github.workspace }}/**/target/site/jacoco/jacoco.xml
+              ${{ github.workspace }}/**/build/reports/jacoco/**/prodNormalDebugCoverage.xml,
+              ${{ github.workspace }}/**/build/reports/jacoco/**/debugCoverage.xml
+            token: ${{ secrets.GITHUB_TOKEN }}
+            min-coverage-overall: 80
+            min-coverage-changed-files: 80
+            title: Code Coverage
+            pass-emoji: ':green_circle:'
+            fail-emoji: ':red_circle:'
+            update-comment: true
+
         - name: "Enforce minimum code coverage threshold on changed files"
-          if: ${{ steps.jacoco.outputs.coverage-changed-files < 80.0 }}
+          if: ${{ github.event_name == 'pull_request' && steps.jacoco.outputs.coverage-changed-files < 80.0 }}
           uses: actions/github-script@v7
           with:
             script: |
