--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -152,6 +152,12 @@ jobs:
             -Djacoco.destFile=${{ github.workspace }}/${{ matrix.subproject }}/target/jacoco-${{ matrix.subproject }}.exec \
       - name: "Upload coverage data"
         uses: actions/upload-artifact@v4
+        if: >
+          github.actor != 'dependabot[bot]' &&
+          github.ref_name != 'master' &&
+          !contains(github.event.head_commit.message, '[release]') &&
+          !contains(github.event.head_commit.message, '[skip tests]') &&
+          !contains(github.event.head_commit.message, '[skip coverage]')
         with:
           name: jacoco-report-${{ matrix.subproject }}
           path: |
@@ -173,6 +179,8 @@ jobs:
         !contains(github.event.head_commit.message, '[skip coverage]')
       steps:
         - uses: actions/checkout@v4
+          with:
+            fetch-depth: 0
 
         - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.23.0
         - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.23.0
@@ -200,23 +208,17 @@ jobs:
             retention-days: 7
             if-no-files-found: warn
         - name: "Add Coverage Report to PR"
-          id: jacoco
-          uses: madrapps/jacoco-report@50d3aff4548aa991e6753342d9ba291084e63848 # v1.7.2
-          with:
-            paths: |
-              ${{ github.workspace }}/**/target/site/jacoco/jacoco.xml
-              ${{ github.workspace }}/**/build/reports/jacoco/**/prodNormalDebugCoverage.xml,
-              ${{ github.workspace }}/**/build/reports/jacoco/**/debugCoverage.xml
-            token: ${{ secrets.GITHUB_TOKEN }}
-            min-coverage-overall: 80
-            min-coverage-changed-files: 80
-            title: Code Coverage
-            pass-emoji: ':green_circle:'
-            fail-emoji: ':red_circle:'
-            update-comment: true
+          id: process_coverage
+          run: |
+            pip install PyGithub
+            python ./scripts/ci/processCoverageReport.py
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            PR_NUMBER: ${{ github.event.pull_request.number }}
+            WORKSPACE: ${{ github.workspace }}
 
         - name: "Enforce minimum code coverage threshold on changed files"
-          if: ${{ github.event_name == 'pull_request' && steps.jacoco.outputs.coverage-changed-files < 80.0 }}
+          if: ${{ github.event_name == 'pull_request' && steps.process_coverage.outputs.coverage-changed-files < 80.0 }}
           uses: actions/github-script@v7
           with:
             script: |
