--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -188,10 +188,20 @@ jobs:
             fetch-depth: 0
         - name: Get PR number
           id: pr
-          run: echo "pull_request_number=$(gh pr view --json number -q .number || echo "")" >> $GITHUB_OUTPUT
+          run: |
+            # Try to find PR by branch name
+            PR_NUMBER=$(gh pr list --head "${{ github.ref_name }}" --state open --json number --jq '.[0].number // empty')
+            if [ -n "$PR_NUMBER" ]; then
+              echo "pull_request_number=$PR_NUMBER" >> $GITHUB_OUTPUT
+              echo "pr_found=true" >> $GITHUB_OUTPUT
+              echo "Found PR #$PR_NUMBER for branch ${{ github.ref_name }}"
+            else
+              echo "pull_request_number=" >> $GITHUB_OUTPUT
+              echo "pr_found=false" >> $GITHUB_OUTPUT
+              echo "No PR found for branch ${{ github.ref_name }}"
+            fi
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        - run: echo ${{ steps.pr.outputs.pull_request_number }}
         - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.23.0
         - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.23.0
 
@@ -216,6 +226,7 @@ jobs:
             if-no-files-found: warn
         - name: "Add Coverage Report to PR"
           id: process_coverage
+          if: steps.pr.outputs.pr_found == 'true'
           run: |
             pip install PyGithub
             python ./scripts/ci/processCoverageReport.py
@@ -225,7 +236,7 @@ jobs:
             GITHUB_REPOSITORY: ${{ github.repository }}
             WORKSPACE: ${{ github.workspace }}
         - name: "Enforce minimum code coverage threshold on changed files"
-          if: ${{ steps.process_coverage.outputs.coverage-changed-files < 80.0 }}
+          if: ${{ steps.pr.outputs.pr_found == 'true' && steps.process_coverage.outputs.coverage-changed-files < 80.0 }}
           uses: actions/github-script@v7
           with:
             script: |
