feat(CIN-4547): replace jacoco-report with our python script (#980)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,6 +126,12 @@ jobs:
             -Djacoco.destFile=${{ github.workspace }}/${{ matrix.subproject }}/target/jacoco-${{ matrix.subproject }}.exec \
       - name: "Upload coverage data"
         uses: actions/upload-artifact@v4
+        if: >
+          github.actor != 'dependabot[bot]' &&
+          github.ref_name != 'master' &&
+          !contains(github.event.head_commit.message, '[release]') &&
+          !contains(github.event.head_commit.message, '[skip tests]') &&
+          !contains(github.event.head_commit.message, '[skip coverage]')
         with:
           name: jacoco-report-${{ matrix.subproject }}
           path: |
@@ -136,7 +142,8 @@ jobs:
   code_coverage_report:
       name: "Generate Code Coverage Report"
       runs-on: ubuntu-latest
-      needs: test_application
+      needs:
+        - test_application
       permissions:
         pull-requests: write
       if: >
@@ -147,7 +154,24 @@ jobs:
         !contains(github.event.head_commit.message, '[skip coverage]')
       steps:
         - uses: actions/checkout@v4
-
+          with:
+            fetch-depth: 0
+        - name: Get PR number
+          id: pr
+          run: |
+            # Try to find PR by branch name
+            PR_NUMBER=$(gh pr list --head "${{ github.ref_name }}" --state open --json number --jq '.[0].number // empty')
+            if [ -n "$PR_NUMBER" ]; then
+              echo "pull_request_number=$PR_NUMBER" >> $GITHUB_OUTPUT
+              echo "pr_found=true" >> $GITHUB_OUTPUT
+              echo "Found PR #$PR_NUMBER for branch ${{ github.ref_name }}"
+            else
+              echo "pull_request_number=" >> $GITHUB_OUTPUT
+              echo "pr_found=false" >> $GITHUB_OUTPUT
+              echo "No PR found for branch ${{ github.ref_name }}"
+            fi
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.23.0
         - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.23.0
 
@@ -157,9 +181,6 @@ jobs:
             pattern: jacoco-report-*
             path: ${{ github.workspace }}/jacoco-data
             merge-multiple: false
-        - name: "List downloaded artifacts"
-          run: |
-            find ${{ github.workspace }}/jacoco-data -type f -name "*.exec" | sort
         - name: "Generate aggregated coverage report"
           run: |
             bash ./scripts/ci/generateCoverageReport.sh
@@ -174,23 +195,18 @@ jobs:
             retention-days: 7
             if-no-files-found: warn
         - name: "Add Coverage Report to PR"
-          id: jacoco
-          uses: madrapps/jacoco-report@50d3aff4548aa991e6753342d9ba291084e63848 # v1.7.2
-          with:
-            paths: |
-              ${{ github.workspace }}/**/target/site/jacoco/jacoco.xml
-              ${{ github.workspace }}/**/build/reports/jacoco/**/prodNormalDebugCoverage.xml,
-              ${{ github.workspace }}/**/build/reports/jacoco/**/debugCoverage.xml
-            token: ${{ secrets.GITHUB_TOKEN }}
-            min-coverage-overall: 80
-            min-coverage-changed-files: 80
-            title: Code Coverage
-            pass-emoji: ':green_circle:'
-            fail-emoji: ':red_circle:'
-            update-comment: true
-
+          id: process_coverage
+          if: steps.pr.outputs.pr_found == 'true'
+          run: |
+            pip install PyGithub
+            python ./scripts/ci/processCoverageReport.py
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            PR_NUMBER: ${{ steps.pr.outputs.pull_request_number }}
+            GITHUB_REPOSITORY: ${{ github.repository }}
+            WORKSPACE: ${{ github.workspace }}
         - name: "Enforce minimum code coverage threshold on changed files"
-          if: ${{ github.event_name == 'pull_request' && steps.jacoco.outputs.coverage-changed-files < 80.0 }}
+          if: ${{ steps.pr.outputs.pr_found == 'true' && steps.process_coverage.outputs.coverage-changed-files < 80.0 }}
           uses: actions/github-script@v7
           with:
             script: |
