fixed some issues and added docu-comments

--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -399,18 +399,23 @@ services:
         condition: service_healthy
     environment:
       JAVA_TOOL_OPTIONS: -agentlib:jdwp=transport=dt_socket,address=*:5010,server=y,suspend=n
-      LOGGING_LEVEL_ORG_ALFRESCO: INFO
-      ALFRESCO_BASEURL: http://alfresco:8080/alfresco/api/-default-/public/alfresco/versions/1
+      SERVER_PORT: 8081
+      SYNC_ENABLED: true
+      SYNC_CRON_EXPRESSION: "0 */2 * * * ?"
+      AUTH_ALFRESCO_TYPE: basic
+      ALFRESCO_USER_NAME:
+      ALFRESCO_PASSWORD:
+      AUTH_HX_TYPE: oauth2
+      HX_CLIENT_ID:
+      HX_CLIENT_SECRET:
+      HX_TOKEN_URI: https://auth.iam.dev.experience.hyland.com/idp/connect/token
+      HX_ENV_KEY:
+      NUCLEUS_IDP_BASE_URL: https://auth.iam.dev.experience.hyland.com
+      NUCLEUS_BASE_URL: https://api.nucleus.dev.experience.hyland.com
+      NUCLEUS_SYSTEM_ID:
+      ALFRESCO_BASE_URL: http://alfresco:8080/alfresco/api/-default-/public/alfresco/versions/1
       SPRING_DATASOURCE_URL: jdbc:sqlite:/data/nucleus-sync.db
-      AUTH_PROVIDERS_ALFRESCO_USERNAME:
-      AUTH_PROVIDERS_ALFRESCO_PASSWORD:
-      AUTH_PROVIDERS_HYLANDEXPERIENCE_CLIENTID:
-      AUTH_PROVIDERS_HYLANDEXPERIENCE_CLIENTSECRET:
-      AUTH_PROVIDERS_HYLANDEXPERIENCE_ENVIRONMENTKEY:
-      AUTH_PROVIDERS_HYLANDEXPERIENCE_TOKENURI: https://auth.iam.dev.experience.hyland.com/idp/connect/token
-      NUCLEUS_IDPBASEURL: https://auth.iam.dev.experience.hyland.com
-      NUCLEUS_BASEURL: https://api.nucleus.dev.experience.hyland.com
-      NUCLEUS_SYSTEMID:
+      LOGGING_LEVEL_ORG_ALFRESCO: TRACE
     ports:
       - "8081:8081"
     volumes:
