--- a/live-ingester/src/integration-test/resources/rest/hxinsight/requests/create-or-update-document.yml
+++ b/live-ingester/src/integration-test/resources/rest/hxinsight/requests/create-or-update-document.yml
@@ -69,6 +69,19 @@ body: [
             "content-type": "application/pdf"
           }
         }
+      },
+      "permissions": {
+        "value": {
+          "read": [
+            {
+              "id": "GROUP_EVERYONE",
+              "type": "GROUP"
+            }
+          ],
+          "deny": [ ],
+          "principalsType": "effective"
+        },
+        "annotation": "principals"
       }
     }
   }
