--- a/pom.xml
+++ b/pom.xml
@@ -281,6 +281,11 @@
                 <version>${wiremock.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.wiremock</groupId>
+                <artifactId>wiremock-standalone</artifactId>
+                <version>${wiremock.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>uk.org.webcompere</groupId>
                 <artifactId>system-stubs-jupiter</artifactId>
                 <version>${system-stubs.version}</version>
