--- a/nucleus-sync/pom.xml
+++ b/nucleus-sync/pom.xml
@@ -31,6 +31,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Add Camel dependencies for AuthService -->
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-spring-boot-starter</artifactId>
+        </dependency>
+
         <!-- WebClient for REST API calls -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -39,6 +45,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
         </dependency>
 
         <dependency>
