--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
 
         <alfresco-platform.version>25.3.0-A.15</alfresco-platform.version>
         <alfresco-sdk.version>4.12.0</alfresco-sdk.version>
-        <alfresco-db-connector.version>1.0.0-A.1</alfresco-db-connector.version>
+        <alfresco-db-connector.version>1.2.0</alfresco-db-connector.version>
         <alfresco-event-model.version>1.0.11</alfresco-event-model.version>
         <spring-boot.version>3.5.7</spring-boot.version>
         <spring-camel.version>4.14.0</spring-camel.version>
