--- a/nucleus-sync/src/integration-test/resources/application-test.yml
+++ b/nucleus-sync/src/integration-test/resources/application-test.yml
@@ -1,3 +1,9 @@
 alfresco:
   base-url: test-alfresco-base-url
   page-size: 100
+
+nucleus:
+  idp-base-url: test-nucleus-idp-base-url
+  base-url: test-nucleus-base-url
+  system-id: test-nucleus-system-id
+  delete-group-member-batch-size: 50
